--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
     <h1>
-        Hello World, I am here.
+        Weather App
     </h1>
     </div>
     <script src="src/index.js"></script>
