--- a/index.html
+++ b/index.html
@@ -10,9 +10,41 @@
 </head>
 <body>
     <div class="container">
+    <div class="weather-app">
     <h1>
-        Weather App
+        New York
     </h1>
+    <ul>
+        <li>
+            Friday 05:00
+        </li>
+        <li>
+            Clear
+        </li>
+    </ul>
+        <div class="row">
+            <div class="col-md-6">
+                <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" alt="partly cloudy" />
+                12°C/ °F
+            </div>
+            <div class="col-md-6">
+                <ul>
+                    <li>
+                        Precipitation: 0%
+                    </li>
+                    <li>
+                        Humidity: 11%
+                    </li>
+                    <li>
+                        Wind: 2 km/h
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <small>
+            <a href"https://github.com/JessieVaught/vanilla-weather-app" target="_blank">Open-Source code</a> by Jessie Vaught
+        </small>
+    </div>
     </div>
     <script src="src/index.js"></script>
 </body>
