--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
         <div class="row">
             <div class="col-6">
                 <div class="clearfix weather-temperature">
-                <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" 
+                <img 
+                src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" 
                 alt="partly cloudy" 
+                id="weather-icon"
                 class="float-left"/>
                 <div class="float-left">
                 <strong id="temperature">12</strong><span class="units">°C | <a href="3">°F</a></span>
