Added link to change unit of measure

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 id="weather-icon"
                 class="float-left"/>
                 <div class="float-left">
-                <strong id="temperature">12</strong><span class="units">°C | <a href="3">°F</a></span>
+                <strong id="temperature">12</strong><span class="units"><a href="#" id="celsius-link" class="active">°C</a> | <a href="#" id="farenheit-link">°F</a></span>
             </div>
         </div>
             </div>
