--- a/index.html
+++ b/index.html
@@ -63,6 +63,17 @@
                 </ul>
             </div>
         </div>
+        <div class="weather-forecast">
+            <div class="row">
+                <div class="col-2">
+                    <div class="weather-firecast-date">Thu</div>
+                    <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" alt="" width="36">
+                    <div class="weather-forecast-temperature">
+                        <span class="weather-forecast-temperature-max">18</span> <span class="weather-forecast-temperature-min">12</span>
+                    </div>
+                </div>
+            </div>
+        </div>
         </div>
         <small>
             <a href"https://github.com/JessieVaught/vanilla-weather-app" target="_blank">Open-Source code</a> by Jessie Vaught
