--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 id="weather-icon"
                 class="float-left"/>
                 <div class="float-left">
-                <strong id="temperature">12</strong><span class="units"><a href="#" id="celsius-link" class="active">°C</a> | <a href="#" id="farenheit-link">°F</a></span>
+                <strong id="temperature">12</strong><span class="units">°F</span>
             </div>
         </div>
             </div>
@@ -58,7 +58,7 @@
                         Humidity: <span id="humidity"></span>%
                     </li>
                     <li>
-                        Wind: <span id="wind"></span> km/h
+                        Wind: <span id="wind"></span> <span class="wind-unit">mph</span>
                     </li>
                 </ul>
             </div>
